# love-native-android

./: .cproject  .gitignore  .project  AndroidManifest.xml  README.md  lint.xml  locate_crash.sh  parse_stack.sh  printstack.sh
.externalToolBuilders/: ndk-build.launch
jni/: Android.mk  AndroidEvent.h  LICENSE  generate_lua.sh  love.cpp  loveCore.h  loveLog.h  m.sh
jni/love/: Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.in
jni/love/src/: Makefile.am  Makefile.in  love.cpp
jni/love/src/common/: Matrix.cpp  Matrix.h  config.h  runtime.cpp  types.h
jni/love/src/modules/audio/openal/: Audio.cpp  Audio.h  Pool.cpp  Pool.h
jni/love/src/modules/event/: Event.cpp  Event.h
jni/love/src/modules/event/android/: Event.cpp  Event.h  wrap_Event.cpp  wrap_Event.h
jni/love/src/modules/event/sdl/: Event.cpp  Event.h  wrap_Event.cpp  wrap_Event.h
jni/love/src/modules/filesystem/physfs/: Filesystem.cpp  wrap_Filesystem.cpp  wrap_Filesystem.h
jni/love/src/modules/font/freetype/: TrueTypeRasterizer.cpp
jni/love/src/modules/graphics/opengl/: Font.cpp  Framebuffer.cpp  Framebuffer.h  GLee.c  Glyph.cpp  Glyph.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ParticleSystem.cpp  SpriteBatch.cpp  SpriteBatch.h  wrap_Graphics.cpp
jni/love/src/modules/graphics/opengles/: Canvas.cpp  Canvas.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  OpenGL.cpp  OpenGL.h  ParticleSystem.cpp  ParticleSystem.h  PixelEffect.cpp  PixelEffect.h  Quad.cpp  Quad.h  SpriteBatch.cpp  SpriteBatch.h  VertexBuffer.cpp  VertexBuffer.h  wrap_Canvas.cpp  wrap_Canvas.h  wrap_Font.cpp  wrap_Font.h  wrap_Graphics.cpp  wrap_Graphics.h  wrap_Image.cpp  wrap_Image.h  wrap_ParticleSystem.cpp  wrap_ParticleSystem.h  wrap_PixelEffect.cpp  wrap_PixelEffect.h  wrap_Quad.cpp  wrap_Quad.h  wrap_SpriteBatch.cpp  wrap_SpriteBatch.h
jni/love/src/modules/joystick/android/: Joystick.cpp  Joystick.h  wrap_Joystick.cpp  wrap_Joystick.h
jni/love/src/modules/keyboard/: wrap_Keyboard.cpp
jni/love/src/modules/keyboard/android/: Keyboard.cpp  Keyboard.h
jni/love/src/modules/keyboard/sdl/: Keyboard.cpp  Keyboard.h  wrap_Keyboard.h
jni/love/src/modules/mouse/: wrap_Mouse.cpp
jni/love/src/modules/mouse/android/: Mouse.cpp  Mouse.h
jni/love/src/modules/mouse/sdl/: Mouse.cpp
jni/love/src/modules/sound/: wrap_Sound.cpp
jni/love/src/modules/sound/lullaby/: ModPlugDecoder.h
jni/love/src/modules/thread/: threads.cpp  threads.h
jni/love/src/modules/thread/pthread/: threads.cpp  threads.h
jni/love/src/modules/thread/sdl/: Thread.cpp  Thread.h
jni/love/src/modules/timer/: wrap_Timer.cpp
jni/love/src/modules/timer/android/: Timer.cpp  Timer.h
jni/love/src/modules/timer/sdl/: Timer.cpp  Timer.h
jni/love/src/modules/window/android/: Window.cpp  Window.h
jni/love/src/scripts/: android.lua  android.lua.h  audio.lua.h  boot.lua  boot.lua.h  graphics.lua  graphics.lua.h
jni/lua-5.1.4/src/: llex.c
res/layout/: launcher.xml
res/layout-land/: launcher.xml
res/values/: strings.xml
src/net/schattenkind/nativelove/: FileBrowser.java  LoveJNI.java  LoveLauncher.java  LoveNative.java  LoveNative.java~  LoveRenderView.java  LoveRenderView.java~  RecentHelper.java
