AM_CPPFLAGS = -I. -I./modules -I/usr/include/AL -I/usr/include/freetype2  $(INCLUDE_LUA) -I/usr/include/SDL $(FILE_OFFSET)
AUTOMAKE_OPTIONS = subdir-objects
DEFAULT_INCLUDES =
SUBDIRS =

# LÖVE executable
bin_PROGRAMS = love
#love_LDFLAGS =
#love_LDADD =

love_SOURCES = \
./scripts/graphics.lua.h \
./scripts/boot.lua.h \
./scripts/audio.lua.h \
./modules/timer/sdl/wrap_Timer.h \
./modules/timer/sdl/wrap_Timer.cpp \
./modules/timer/sdl/Timer.h \
./modules/timer/sdl/Timer.cpp \
./modules/thread/sdl/wrap_Thread.h \
./modules/thread/sdl/wrap_Thread.cpp \
./modules/thread/sdl/Thread.h \
./modules/thread/sdl/Thread.cpp \
./modules/thread/ThreadModule.h \
./modules/sound/wrap_SoundData.h \
./modules/sound/wrap_SoundData.cpp \
./modules/sound/wrap_Sound.h \
./modules/sound/wrap_Sound.cpp \
./modules/sound/wrap_Decoder.h \
./modules/sound/wrap_Decoder.cpp \
./modules/sound/lullaby/VorbisDecoder.h \
./modules/sound/lullaby/VorbisDecoder.cpp \
./modules/sound/lullaby/Sound.h \
./modules/sound/lullaby/Sound.cpp \
./modules/sound/lullaby/Mpg123Decoder.h \
./modules/sound/lullaby/Mpg123Decoder.cpp \
./modules/sound/lullaby/ModPlugDecoder.h \
./modules/sound/lullaby/ModPlugDecoder.cpp \
./modules/sound/lullaby/Decoder.h \
./modules/sound/lullaby/Decoder.cpp \
./modules/sound/SoundData.h \
./modules/sound/SoundData.cpp \
./modules/sound/Sound.h \
./modules/sound/Sound.cpp \
./modules/sound/Decoder.h \
./modules/physics/box2d/wrap_World.h \
./modules/physics/box2d/wrap_World.cpp \
./modules/physics/box2d/wrap_Shape.h \
./modules/physics/box2d/wrap_Shape.cpp \
./modules/physics/box2d/wrap_RevoluteJoint.h \
./modules/physics/box2d/wrap_RevoluteJoint.cpp \
./modules/physics/box2d/wrap_PulleyJoint.h \
./modules/physics/box2d/wrap_PulleyJoint.cpp \
./modules/physics/box2d/wrap_PrismaticJoint.h \
./modules/physics/box2d/wrap_PrismaticJoint.cpp \
./modules/physics/box2d/wrap_PolygonShape.h \
./modules/physics/box2d/wrap_PolygonShape.cpp \
./modules/physics/box2d/wrap_Physics.h \
./modules/physics/box2d/wrap_Physics.cpp \
./modules/physics/box2d/wrap_MouseJoint.h \
./modules/physics/box2d/wrap_MouseJoint.cpp \
./modules/physics/box2d/wrap_Joint.h \
./modules/physics/box2d/wrap_Joint.cpp \
./modules/physics/box2d/wrap_GearJoint.h \
./modules/physics/box2d/wrap_GearJoint.cpp \
./modules/physics/box2d/wrap_DistanceJoint.h \
./modules/physics/box2d/wrap_DistanceJoint.cpp \
./modules/physics/box2d/wrap_Contact.h \
./modules/physics/box2d/wrap_Contact.cpp \
./modules/physics/box2d/wrap_CircleShape.h \
./modules/physics/box2d/wrap_CircleShape.cpp \
./modules/physics/box2d/wrap_Body.h \
./modules/physics/box2d/wrap_Body.cpp \
./modules/physics/box2d/graham/GrahamScanConvexHull.h \
./modules/physics/box2d/graham/GrahamScanConvexHull.cpp \
./modules/physics/box2d/World.h \
./modules/physics/box2d/World.cpp \
./modules/physics/box2d/Source/Dynamics/b2WorldCallbacks.h \
./modules/physics/box2d/Source/Dynamics/b2WorldCallbacks.cpp \
./modules/physics/box2d/Source/Dynamics/b2World.h \
./modules/physics/box2d/Source/Dynamics/b2World.cpp \
./modules/physics/box2d/Source/Dynamics/b2Island.h \
./modules/physics/box2d/Source/Dynamics/b2Island.cpp \
./modules/physics/box2d/Source/Dynamics/b2ContactManager.h \
./modules/physics/box2d/Source/Dynamics/b2ContactManager.cpp \
./modules/physics/box2d/Source/Dynamics/b2Body.h \
./modules/physics/box2d/Source/Dynamics/b2Body.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2RevoluteJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2RevoluteJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2PulleyJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2PulleyJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2PrismaticJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2PrismaticJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2MouseJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2MouseJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2Joint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2Joint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2GearJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2GearJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Joints/b2DistanceJoint.h \
./modules/physics/box2d/Source/Dynamics/Joints/b2DistanceJoint.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyContact.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2NullContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2ContactSolver.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2ContactSolver.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2Contact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2Contact.cpp \
./modules/physics/box2d/Source/Dynamics/Contacts/b2CircleContact.h \
./modules/physics/box2d/Source/Dynamics/Contacts/b2CircleContact.cpp \
./modules/physics/box2d/Source/Common/jtypes.h \
./modules/physics/box2d/Source/Common/b2StackAllocator.h \
./modules/physics/box2d/Source/Common/b2StackAllocator.cpp \
./modules/physics/box2d/Source/Common/b2Settings.h \
./modules/physics/box2d/Source/Common/b2Settings.cpp \
./modules/physics/box2d/Source/Common/b2Math.h \
./modules/physics/box2d/Source/Common/b2Math.cpp \
./modules/physics/box2d/Source/Common/b2BlockAllocator.h \
./modules/physics/box2d/Source/Common/b2BlockAllocator.cpp \
./modules/physics/box2d/Source/Common/Fixed.h \
./modules/physics/box2d/Source/Collision/b2TimeOfImpact.cpp \
./modules/physics/box2d/Source/Collision/b2PairManager.h \
./modules/physics/box2d/Source/Collision/b2PairManager.cpp \
./modules/physics/box2d/Source/Collision/b2Distance.cpp \
./modules/physics/box2d/Source/Collision/b2Collision.h \
./modules/physics/box2d/Source/Collision/b2Collision.cpp \
./modules/physics/box2d/Source/Collision/b2CollidePoly.cpp \
./modules/physics/box2d/Source/Collision/b2CollideCircle.cpp \
./modules/physics/box2d/Source/Collision/b2BroadPhase.h \
./modules/physics/box2d/Source/Collision/b2BroadPhase.cpp \
./modules/physics/box2d/Source/Collision/Shapes/b2Shape.h \
./modules/physics/box2d/Source/Collision/Shapes/b2Shape.cpp \
./modules/physics/box2d/Source/Collision/Shapes/b2PolygonShape.h \
./modules/physics/box2d/Source/Collision/Shapes/b2PolygonShape.cpp \
./modules/physics/box2d/Source/Collision/Shapes/b2CircleShape.h \
./modules/physics/box2d/Source/Collision/Shapes/b2CircleShape.cpp \
./modules/physics/box2d/Shape.h \
./modules/physics/box2d/Shape.cpp \
./modules/physics/box2d/RevoluteJoint.h \
./modules/physics/box2d/RevoluteJoint.cpp \
./modules/physics/box2d/PulleyJoint.h \
./modules/physics/box2d/PulleyJoint.cpp \
./modules/physics/box2d/PrismaticJoint.h \
./modules/physics/box2d/PrismaticJoint.cpp \
./modules/physics/box2d/PolygonShape.h \
./modules/physics/box2d/PolygonShape.cpp \
./modules/physics/box2d/Physics.h \
./modules/physics/box2d/Physics.cpp \
./modules/physics/box2d/MouseJoint.h \
./modules/physics/box2d/MouseJoint.cpp \
./modules/physics/box2d/Joint.h \
./modules/physics/box2d/Joint.cpp \
./modules/physics/box2d/Include/Box2D.h \
./modules/physics/box2d/GearJoint.h \
./modules/physics/box2d/GearJoint.cpp \
./modules/physics/box2d/DistanceJoint.h \
./modules/physics/box2d/DistanceJoint.cpp \
./modules/physics/box2d/Contact.h \
./modules/physics/box2d/Contact.cpp \
./modules/physics/box2d/CircleShape.h \
./modules/physics/box2d/CircleShape.cpp \
./modules/physics/box2d/Body.h \
./modules/physics/box2d/Body.cpp \
./modules/physics/Shape.h \
./modules/physics/Shape.cpp \
./modules/physics/Joint.h \
./modules/physics/Joint.cpp \
./modules/mouse/sdl/wrap_Mouse.h \
./modules/mouse/sdl/wrap_Mouse.cpp \
./modules/mouse/sdl/Mouse.h \
./modules/mouse/sdl/Mouse.cpp \
./modules/mouse/Mouse.h \
./modules/mouse/Mouse.cpp \
./modules/keyboard/sdl/wrap_Keyboard.h \
./modules/keyboard/sdl/wrap_Keyboard.cpp \
./modules/keyboard/sdl/Keyboard.h \
./modules/keyboard/sdl/Keyboard.cpp \
./modules/keyboard/Keyboard.h \
./modules/keyboard/Keyboard.cpp \
./modules/joystick/sdl/wrap_Joystick.h \
./modules/joystick/sdl/wrap_Joystick.cpp \
./modules/joystick/sdl/Joystick.h \
./modules/joystick/sdl/Joystick.cpp \
./modules/joystick/Joystick.h \
./modules/joystick/Joystick.cpp \
./modules/image/wrap_ImageData.h \
./modules/image/wrap_ImageData.cpp \
./modules/image/wrap_Image.h \
./modules/image/wrap_Image.cpp \
./modules/image/wrap_EncodedImageData.h \
./modules/image/wrap_EncodedImageData.cpp \
./modules/image/devil/ImageData.h \
./modules/image/devil/ImageData.cpp \
./modules/image/devil/Image.h \
./modules/image/devil/Image.cpp \
./modules/image/ImageData.h \
./modules/image/ImageData.cpp \
./modules/image/Image.h \
./modules/image/EncodedImageData.h \
./modules/image/EncodedImageData.cpp \
./modules/graphics/opengl/wrap_SpriteBatch.h \
./modules/graphics/opengl/wrap_SpriteBatch.cpp \
./modules/graphics/opengl/wrap_Quad.h \
./modules/graphics/opengl/wrap_Quad.cpp \
./modules/graphics/opengl/wrap_ParticleSystem.h \
./modules/graphics/opengl/wrap_ParticleSystem.cpp \
./modules/graphics/opengl/wrap_Image.h \
./modules/graphics/opengl/wrap_Image.cpp \
./modules/graphics/opengl/wrap_Graphics.h \
./modules/graphics/opengl/wrap_Graphics.cpp \
./modules/graphics/opengl/wrap_Glyph.h \
./modules/graphics/opengl/wrap_Glyph.cpp \
./modules/graphics/opengl/wrap_Framebuffer.h \
./modules/graphics/opengl/wrap_Framebuffer.cpp \
./modules/graphics/opengl/wrap_Font.h \
./modules/graphics/opengl/wrap_Font.cpp \
./modules/graphics/opengl/SpriteBatch.h \
./modules/graphics/opengl/SpriteBatch.cpp \
./modules/graphics/opengl/Quad.h \
./modules/graphics/opengl/Quad.cpp \
./modules/graphics/opengl/ParticleSystem.h \
./modules/graphics/opengl/ParticleSystem.cpp \
./modules/graphics/opengl/Image.h \
./modules/graphics/opengl/Image.cpp \
./modules/graphics/opengl/Graphics.h \
./modules/graphics/opengl/Graphics.cpp \
./modules/graphics/opengl/Glyph.h \
./modules/graphics/opengl/Glyph.cpp \
./modules/graphics/opengl/GLee.h \
./modules/graphics/opengl/GLee.c \
./modules/graphics/opengl/Framebuffer.h \
./modules/graphics/opengl/Framebuffer.cpp \
./modules/graphics/opengl/Font.h \
./modules/graphics/opengl/Font.cpp \
./modules/graphics/Volatile.h \
./modules/graphics/Volatile.cpp \
./modules/graphics/Image.h \
./modules/graphics/Image.cpp \
./modules/graphics/Graphics.h \
./modules/graphics/Graphics.cpp \
./modules/graphics/Drawable.h \
./modules/graphics/Drawable.cpp \
./modules/font/wrap_Rasterizer.h \
./modules/font/wrap_Rasterizer.cpp \
./modules/font/wrap_GlyphData.h \
./modules/font/wrap_GlyphData.cpp \
./modules/font/wrap_FontData.h \
./modules/font/wrap_FontData.cpp \
./modules/font/freetype/wrap_Font.h \
./modules/font/freetype/wrap_Font.cpp \
./modules/font/freetype/TrueTypeRasterizer.h \
./modules/font/freetype/TrueTypeRasterizer.cpp \
./modules/font/freetype/Font.h \
./modules/font/freetype/Font.cpp \
./modules/font/Rasterizer.h \
./modules/font/Rasterizer.cpp \
./modules/font/ImageRasterizer.h \
./modules/font/ImageRasterizer.cpp \
./modules/font/GlyphData.h \
./modules/font/GlyphData.cpp \
./modules/font/FontData.h \
./modules/font/FontData.cpp \
./modules/font/Font.h \
./modules/filesystem/physfs/wrap_Filesystem.h \
./modules/filesystem/physfs/wrap_Filesystem.cpp \
./modules/filesystem/physfs/wrap_FileData.h \
./modules/filesystem/physfs/wrap_FileData.cpp \
./modules/filesystem/physfs/wrap_File.h \
./modules/filesystem/physfs/wrap_File.cpp \
./modules/filesystem/physfs/Filesystem.h \
./modules/filesystem/physfs/Filesystem.cpp \
./modules/filesystem/physfs/File.h \
./modules/filesystem/physfs/File.cpp \
./modules/filesystem/FileData.h \
./modules/filesystem/FileData.cpp \
./modules/filesystem/File.h \
./modules/filesystem/File.cpp \
./modules/event/sdl/wrap_Event.h \
./modules/event/sdl/wrap_Event.cpp \
./modules/event/sdl/Event.h \
./modules/event/sdl/Event.cpp \
./modules/event/Event.h \
./modules/event/Event.cpp \
./modules/audio/wrap_Source.h \
./modules/audio/wrap_Source.cpp \
./modules/audio/wrap_Audio.h \
./modules/audio/wrap_Audio.cpp \
./modules/audio/openal/Source.h \
./modules/audio/openal/Source.cpp \
./modules/audio/openal/Pool.h \
./modules/audio/openal/Pool.cpp \
./modules/audio/openal/Audio.h \
./modules/audio/openal/Audio.cpp \
./modules/audio/null/Source.h \
./modules/audio/null/Source.cpp \
./modules/audio/null/Audio.h \
./modules/audio/null/Audio.cpp \
./modules/audio/Source.h \
./modules/audio/Source.cpp \
./modules/audio/Audio.h \
./love.cpp \
./libraries/luasocket/luasocket.h \
./libraries/luasocket/luasocket.cpp \
./libraries/luasocket/libluasocket/usocket.h \
./libraries/luasocket/libluasocket/usocket.c \
./libraries/luasocket/libluasocket/url.lua.h \
./libraries/luasocket/libluasocket/unix.h \
./libraries/luasocket/libluasocket/unix.c \
./libraries/luasocket/libluasocket/udp.h \
./libraries/luasocket/libluasocket/udp.c \
./libraries/luasocket/libluasocket/tp.lua.h \
./libraries/luasocket/libluasocket/timeout.h \
./libraries/luasocket/libluasocket/timeout.c \
./libraries/luasocket/libluasocket/tcp.h \
./libraries/luasocket/libluasocket/tcp.c \
./libraries/luasocket/libluasocket/socket.lua.h \
./libraries/luasocket/libluasocket/socket.h \
./libraries/luasocket/libluasocket/smtp.lua.h \
./libraries/luasocket/libluasocket/select.h \
./libraries/luasocket/libluasocket/select.c \
./libraries/luasocket/libluasocket/options.h \
./libraries/luasocket/libluasocket/options.c \
./libraries/luasocket/libluasocket/mime.lua.h \
./libraries/luasocket/libluasocket/mime.h \
./libraries/luasocket/libluasocket/mime.c \
./libraries/luasocket/libluasocket/luasocket.h \
./libraries/luasocket/libluasocket/luasocket.c \
./libraries/luasocket/libluasocket/ltn12.lua.h \
./libraries/luasocket/libluasocket/io.h \
./libraries/luasocket/libluasocket/io.c \
./libraries/luasocket/libluasocket/inet.h \
./libraries/luasocket/libluasocket/inet.c \
./libraries/luasocket/libluasocket/http.lua.h \
./libraries/luasocket/libluasocket/ftp.lua.h \
./libraries/luasocket/libluasocket/except.h \
./libraries/luasocket/libluasocket/except.c \
./libraries/luasocket/libluasocket/buffer.h \
./libraries/luasocket/libluasocket/buffer.c \
./libraries/luasocket/libluasocket/auxiliar.h \
./libraries/luasocket/libluasocket/auxiliar.c \
./common/wrap_Data.h \
./common/wrap_Data.cpp \
./common/version.h \
./common/utf8.h \
./common/utf8.cpp \
./common/types.h \
./common/runtime.h \
./common/runtime.cpp \
./common/math.h \
./common/config.h \
./common/b64.h \
./common/b64.cpp \
./common/Vector.h \
./common/Vector.cpp \
./common/StringMap.h \
./common/Reference.h \
./common/Reference.cpp \
./common/Object.h \
./common/Object.cpp \
./common/Module.h \
./common/MemoryData.h \
./common/MemoryData.cpp \
./common/Matrix.h \
./common/Matrix.cpp \
./common/Exception.h \
./common/Exception.cpp \
./common/EnumMap.h \
./common/Data.h