AM_CPPFLAGS = -I. -I./modules -I./libraries -I/usr/include/AL -I/usr/include/freetype2  $(INCLUDE_LUA) -I/usr/include/SDL $(FILE_OFFSET)
AUTOMAKE_OPTIONS = subdir-objects
SUBDIRS =

# LÖVE executable
bin_PROGRAMS = love
#love_LDFLAGS =
#love_LDADD =

love_SOURCES = \
./scripts/graphics.lua.h \
./scripts/boot.lua.h \
./scripts/audio.lua.h \
./modules/window/sdl/Window.h \
./modules/window/sdl/Window.cpp \
./modules/window/Window.h \
./modules/window/Window.cpp \
./modules/timer/wrap_Timer.h \
./modules/timer/wrap_Timer.cpp \
./modules/timer/sdl/Timer.h \
./modules/timer/sdl/Timer.cpp \
./modules/timer/Timer.h \
./modules/thread/wrap_Thread.h \
./modules/thread/wrap_Thread.cpp \
./modules/thread/threads.h \
./modules/thread/threads.cpp \
./modules/thread/Thread.h \
./modules/thread/Thread.cpp \
./modules/sound/wrap_SoundData.h \
./modules/sound/wrap_SoundData.cpp \
./modules/sound/wrap_Sound.h \
./modules/sound/wrap_Sound.cpp \
./modules/sound/wrap_Decoder.h \
./modules/sound/wrap_Decoder.cpp \
./modules/sound/lullaby/VorbisDecoder.h \
./modules/sound/lullaby/VorbisDecoder.cpp \
./modules/sound/lullaby/Sound.h \
./modules/sound/lullaby/Sound.cpp \
./modules/sound/lullaby/Mpg123Decoder.h \
./modules/sound/lullaby/Mpg123Decoder.cpp \
./modules/sound/lullaby/ModPlugDecoder.h \
./modules/sound/lullaby/ModPlugDecoder.cpp \
./modules/sound/lullaby/Decoder.h \
./modules/sound/lullaby/Decoder.cpp \
./modules/sound/SoundData.h \
./modules/sound/SoundData.cpp \
./modules/sound/Sound.h \
./modules/sound/Sound.cpp \
./modules/sound/Decoder.h \
./modules/physics/box2d/wrap_World.h \
./modules/physics/box2d/wrap_World.cpp \
./modules/physics/box2d/wrap_WheelJoint.h \
./modules/physics/box2d/wrap_WheelJoint.cpp \
./modules/physics/box2d/wrap_WeldJoint.h \
./modules/physics/box2d/wrap_WeldJoint.cpp \
./modules/physics/box2d/wrap_Shape.h \
./modules/physics/box2d/wrap_Shape.cpp \
./modules/physics/box2d/wrap_RopeJoint.h \
./modules/physics/box2d/wrap_RopeJoint.cpp \
./modules/physics/box2d/wrap_RevoluteJoint.h \
./modules/physics/box2d/wrap_RevoluteJoint.cpp \
./modules/physics/box2d/wrap_PulleyJoint.h \
./modules/physics/box2d/wrap_PulleyJoint.cpp \
./modules/physics/box2d/wrap_PrismaticJoint.h \
./modules/physics/box2d/wrap_PrismaticJoint.cpp \
./modules/physics/box2d/wrap_PolygonShape.h \
./modules/physics/box2d/wrap_PolygonShape.cpp \
./modules/physics/box2d/wrap_Physics.h \
./modules/physics/box2d/wrap_Physics.cpp \
./modules/physics/box2d/wrap_MouseJoint.h \
./modules/physics/box2d/wrap_MouseJoint.cpp \
./modules/physics/box2d/wrap_Joint.h \
./modules/physics/box2d/wrap_Joint.cpp \
./modules/physics/box2d/wrap_GearJoint.h \
./modules/physics/box2d/wrap_GearJoint.cpp \
./modules/physics/box2d/wrap_FrictionJoint.h \
./modules/physics/box2d/wrap_FrictionJoint.cpp \
./modules/physics/box2d/wrap_Fixture.h \
./modules/physics/box2d/wrap_Fixture.cpp \
./modules/physics/box2d/wrap_EdgeShape.h \
./modules/physics/box2d/wrap_EdgeShape.cpp \
./modules/physics/box2d/wrap_DistanceJoint.h \
./modules/physics/box2d/wrap_DistanceJoint.cpp \
./modules/physics/box2d/wrap_Contact.h \
./modules/physics/box2d/wrap_Contact.cpp \
./modules/physics/box2d/wrap_CircleShape.h \
./modules/physics/box2d/wrap_CircleShape.cpp \
./modules/physics/box2d/wrap_ChainShape.h \
./modules/physics/box2d/wrap_ChainShape.cpp \
./modules/physics/box2d/wrap_Body.h \
./modules/physics/box2d/wrap_Body.cpp \
./modules/physics/box2d/World.h \
./modules/physics/box2d/World.cpp \
./modules/physics/box2d/WheelJoint.h \
./modules/physics/box2d/WheelJoint.cpp \
./modules/physics/box2d/WeldJoint.h \
./modules/physics/box2d/WeldJoint.cpp \
./modules/physics/box2d/Shape.h \
./modules/physics/box2d/Shape.cpp \
./modules/physics/box2d/RopeJoint.h \
./modules/physics/box2d/RopeJoint.cpp \
./modules/physics/box2d/RevoluteJoint.h \
./modules/physics/box2d/RevoluteJoint.cpp \
./modules/physics/box2d/PulleyJoint.h \
./modules/physics/box2d/PulleyJoint.cpp \
./modules/physics/box2d/PrismaticJoint.h \
./modules/physics/box2d/PrismaticJoint.cpp \
./modules/physics/box2d/PolygonShape.h \
./modules/physics/box2d/PolygonShape.cpp \
./modules/physics/box2d/Physics.h \
./modules/physics/box2d/Physics.cpp \
./modules/physics/box2d/MouseJoint.h \
./modules/physics/box2d/MouseJoint.cpp \
./modules/physics/box2d/Joint.h \
./modules/physics/box2d/Joint.cpp \
./modules/physics/box2d/GearJoint.h \
./modules/physics/box2d/GearJoint.cpp \
./modules/physics/box2d/FrictionJoint.h \
./modules/physics/box2d/FrictionJoint.cpp \
./modules/physics/box2d/Fixture.h \
./modules/physics/box2d/Fixture.cpp \
./modules/physics/box2d/EdgeShape.h \
./modules/physics/box2d/EdgeShape.cpp \
./modules/physics/box2d/DistanceJoint.h \
./modules/physics/box2d/DistanceJoint.cpp \
./modules/physics/box2d/Contact.h \
./modules/physics/box2d/Contact.cpp \
./modules/physics/box2d/CircleShape.h \
./modules/physics/box2d/CircleShape.cpp \
./modules/physics/box2d/ChainShape.h \
./modules/physics/box2d/ChainShape.cpp \
./modules/physics/box2d/Body.h \
./modules/physics/box2d/Body.cpp \
./modules/physics/Shape.h \
./modules/physics/Shape.cpp \
./modules/physics/Joint.h \
./modules/physics/Joint.cpp \
./modules/physics/Body.h \
./modules/physics/Body.cpp \
./modules/mouse/wrap_Mouse.h \
./modules/mouse/wrap_Mouse.cpp \
./modules/mouse/sdl/Mouse.h \
./modules/mouse/sdl/Mouse.cpp \
./modules/mouse/Mouse.h \
./modules/mouse/Mouse.cpp \
./modules/keyboard/wrap_Keyboard.h \
./modules/keyboard/wrap_Keyboard.cpp \
./modules/keyboard/sdl/Keyboard.h \
./modules/keyboard/sdl/Keyboard.cpp \
./modules/keyboard/Keyboard.h \
./modules/keyboard/Keyboard.cpp \
./modules/joystick/sdl/wrap_Joystick.h \
./modules/joystick/sdl/wrap_Joystick.cpp \
./modules/joystick/sdl/Joystick.h \
./modules/joystick/sdl/Joystick.cpp \
./modules/joystick/Joystick.h \
./modules/joystick/Joystick.cpp \
./modules/image/wrap_ImageData.h \
./modules/image/wrap_ImageData.cpp \
./modules/image/wrap_Image.h \
./modules/image/wrap_Image.cpp \
./modules/image/devil/ImageData.h \
./modules/image/devil/ImageData.cpp \
./modules/image/devil/Image.h \
./modules/image/devil/Image.cpp \
./modules/image/ImageData.h \
./modules/image/ImageData.cpp \
./modules/image/Image.h \
./modules/graphics/opengl/wrap_SpriteBatch.h \
./modules/graphics/opengl/wrap_SpriteBatch.cpp \
./modules/graphics/opengl/wrap_Quad.h \
./modules/graphics/opengl/wrap_Quad.cpp \
./modules/graphics/opengl/wrap_PixelEffect.h \
./modules/graphics/opengl/wrap_PixelEffect.cpp \
./modules/graphics/opengl/wrap_ParticleSystem.h \
./modules/graphics/opengl/wrap_ParticleSystem.cpp \
./modules/graphics/opengl/wrap_Image.h \
./modules/graphics/opengl/wrap_Image.cpp \
./modules/graphics/opengl/wrap_Graphics.h \
./modules/graphics/opengl/wrap_Graphics.cpp \
./modules/graphics/opengl/wrap_Font.h \
./modules/graphics/opengl/wrap_Font.cpp \
./modules/graphics/opengl/wrap_Canvas.h \
./modules/graphics/opengl/wrap_Canvas.cpp \
./modules/graphics/opengl/VertexBuffer.h \
./modules/graphics/opengl/VertexBuffer.cpp \
./modules/graphics/opengl/SpriteBatch.h \
./modules/graphics/opengl/SpriteBatch.cpp \
./modules/graphics/opengl/Quad.h \
./modules/graphics/opengl/Quad.cpp \
./modules/graphics/opengl/PixelEffect.h \
./modules/graphics/opengl/PixelEffect.cpp \
./modules/graphics/opengl/ParticleSystem.h \
./modules/graphics/opengl/ParticleSystem.cpp \
./modules/graphics/opengl/OpenGL.h \
./modules/graphics/opengl/OpenGL.cpp \
./modules/graphics/opengl/Image.h \
./modules/graphics/opengl/Image.cpp \
./modules/graphics/opengl/Graphics.h \
./modules/graphics/opengl/Graphics.cpp \
./modules/graphics/opengl/GLee.h \
./modules/graphics/opengl/GLee.c \
./modules/graphics/opengl/Font.h \
./modules/graphics/opengl/Font.cpp \
./modules/graphics/opengl/Canvas.h \
./modules/graphics/opengl/Canvas.cpp \
./modules/graphics/Volatile.h \
./modules/graphics/Volatile.cpp \
./modules/graphics/Quad.h \
./modules/graphics/Quad.cpp \
./modules/graphics/Image.h \
./modules/graphics/Image.cpp \
./modules/graphics/Graphics.h \
./modules/graphics/Graphics.cpp \
./modules/graphics/Drawable.h \
./modules/graphics/Drawable.cpp \
./modules/graphics/DrawQable.h \
./modules/graphics/DrawQable.cpp \
./modules/graphics/Color.h \
./modules/font/wrap_Rasterizer.h \
./modules/font/wrap_Rasterizer.cpp \
./modules/font/wrap_GlyphData.h \
./modules/font/wrap_GlyphData.cpp \
./modules/font/freetype/wrap_Font.h \
./modules/font/freetype/wrap_Font.cpp \
./modules/font/freetype/TrueTypeRasterizer.h \
./modules/font/freetype/TrueTypeRasterizer.cpp \
./modules/font/freetype/Font.h \
./modules/font/freetype/Font.cpp \
./modules/font/Rasterizer.h \
./modules/font/Rasterizer.cpp \
./modules/font/ImageRasterizer.h \
./modules/font/ImageRasterizer.cpp \
./modules/font/GlyphData.h \
./modules/font/GlyphData.cpp \
./modules/font/Font.h \
./modules/filesystem/physfs/wrap_Filesystem.h \
./modules/filesystem/physfs/wrap_Filesystem.cpp \
./modules/filesystem/physfs/wrap_FileData.h \
./modules/filesystem/physfs/wrap_FileData.cpp \
./modules/filesystem/physfs/wrap_File.h \
./modules/filesystem/physfs/wrap_File.cpp \
./modules/filesystem/physfs/Filesystem.h \
./modules/filesystem/physfs/Filesystem.cpp \
./modules/filesystem/physfs/File.h \
./modules/filesystem/physfs/File.cpp \
./modules/filesystem/FileData.h \
./modules/filesystem/FileData.cpp \
./modules/filesystem/File.h \
./modules/filesystem/File.cpp \
./modules/event/sdl/wrap_Event.h \
./modules/event/sdl/wrap_Event.cpp \
./modules/event/sdl/Event.h \
./modules/event/sdl/Event.cpp \
./modules/event/Event.h \
./modules/event/Event.cpp \
./modules/audio/wrap_Source.h \
./modules/audio/wrap_Source.cpp \
./modules/audio/wrap_Audio.h \
./modules/audio/wrap_Audio.cpp \
./modules/audio/openal/Source.h \
./modules/audio/openal/Source.cpp \
./modules/audio/openal/Pool.h \
./modules/audio/openal/Pool.cpp \
./modules/audio/openal/Audio.h \
./modules/audio/openal/Audio.cpp \
./modules/audio/null/Source.h \
./modules/audio/null/Source.cpp \
./modules/audio/null/Audio.h \
./modules/audio/null/Audio.cpp \
./modules/audio/Source.h \
./modules/audio/Source.cpp \
./modules/audio/Audio.h \
./modules/audio/Audio.cpp \
./love.cpp \
./libraries/utf8/utf8/unchecked.h \
./libraries/utf8/utf8/core.h \
./libraries/utf8/utf8/checked.h \
./libraries/utf8/utf8.h \
./libraries/luasocket/luasocket.h \
./libraries/luasocket/luasocket.cpp \
./libraries/luasocket/libluasocket/usocket.h \
./libraries/luasocket/libluasocket/usocket.c \
./libraries/luasocket/libluasocket/url.lua.h \
./libraries/luasocket/libluasocket/unix.h \
./libraries/luasocket/libluasocket/unix.c \
./libraries/luasocket/libluasocket/udp.h \
./libraries/luasocket/libluasocket/udp.c \
./libraries/luasocket/libluasocket/tp.lua.h \
./libraries/luasocket/libluasocket/timeout.h \
./libraries/luasocket/libluasocket/timeout.c \
./libraries/luasocket/libluasocket/tcp.h \
./libraries/luasocket/libluasocket/tcp.c \
./libraries/luasocket/libluasocket/socket.lua.h \
./libraries/luasocket/libluasocket/socket.h \
./libraries/luasocket/libluasocket/smtp.lua.h \
./libraries/luasocket/libluasocket/select.h \
./libraries/luasocket/libluasocket/select.c \
./libraries/luasocket/libluasocket/options.h \
./libraries/luasocket/libluasocket/options.c \
./libraries/luasocket/libluasocket/mime.lua.h \
./libraries/luasocket/libluasocket/mime.h \
./libraries/luasocket/libluasocket/mime.c \
./libraries/luasocket/libluasocket/luasocket.h \
./libraries/luasocket/libluasocket/luasocket.c \
./libraries/luasocket/libluasocket/ltn12.lua.h \
./libraries/luasocket/libluasocket/io.h \
./libraries/luasocket/libluasocket/io.c \
./libraries/luasocket/libluasocket/inet.h \
./libraries/luasocket/libluasocket/inet.c \
./libraries/luasocket/libluasocket/http.lua.h \
./libraries/luasocket/libluasocket/ftp.lua.h \
./libraries/luasocket/libluasocket/except.h \
./libraries/luasocket/libluasocket/except.c \
./libraries/luasocket/libluasocket/buffer.h \
./libraries/luasocket/libluasocket/buffer.c \
./libraries/luasocket/libluasocket/auxiliar.h \
./libraries/luasocket/libluasocket/auxiliar.c \
./libraries/Box2D/Rope/b2Rope.h \
./libraries/Box2D/Rope/b2Rope.cpp \
./libraries/Box2D/Dynamics/b2WorldCallbacks.h \
./libraries/Box2D/Dynamics/b2WorldCallbacks.cpp \
./libraries/Box2D/Dynamics/b2World.h \
./libraries/Box2D/Dynamics/b2World.cpp \
./libraries/Box2D/Dynamics/b2TimeStep.h \
./libraries/Box2D/Dynamics/b2Island.h \
./libraries/Box2D/Dynamics/b2Island.cpp \
./libraries/Box2D/Dynamics/b2Fixture.h \
./libraries/Box2D/Dynamics/b2Fixture.cpp \
./libraries/Box2D/Dynamics/b2ContactManager.h \
./libraries/Box2D/Dynamics/b2ContactManager.cpp \
./libraries/Box2D/Dynamics/b2Body.h \
./libraries/Box2D/Dynamics/b2Body.cpp \
./libraries/Box2D/Dynamics/Joints/b2WheelJoint.h \
./libraries/Box2D/Dynamics/Joints/b2WheelJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2WeldJoint.h \
./libraries/Box2D/Dynamics/Joints/b2WeldJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2RopeJoint.h \
./libraries/Box2D/Dynamics/Joints/b2RopeJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2RevoluteJoint.h \
./libraries/Box2D/Dynamics/Joints/b2RevoluteJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2PulleyJoint.h \
./libraries/Box2D/Dynamics/Joints/b2PulleyJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2PrismaticJoint.h \
./libraries/Box2D/Dynamics/Joints/b2PrismaticJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2MouseJoint.h \
./libraries/Box2D/Dynamics/Joints/b2MouseJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2Joint.h \
./libraries/Box2D/Dynamics/Joints/b2Joint.cpp \
./libraries/Box2D/Dynamics/Joints/b2GearJoint.h \
./libraries/Box2D/Dynamics/Joints/b2GearJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2FrictionJoint.h \
./libraries/Box2D/Dynamics/Joints/b2FrictionJoint.cpp \
./libraries/Box2D/Dynamics/Joints/b2DistanceJoint.h \
./libraries/Box2D/Dynamics/Joints/b2DistanceJoint.cpp \
./libraries/Box2D/Dynamics/Contacts/b2PolygonContact.h \
./libraries/Box2D/Dynamics/Contacts/b2PolygonContact.cpp \
./libraries/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.h \
./libraries/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp \
./libraries/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.h \
./libraries/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp \
./libraries/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.h \
./libraries/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp \
./libraries/Box2D/Dynamics/Contacts/b2ContactSolver.h \
./libraries/Box2D/Dynamics/Contacts/b2ContactSolver.cpp \
./libraries/Box2D/Dynamics/Contacts/b2Contact.h \
./libraries/Box2D/Dynamics/Contacts/b2Contact.cpp \
./libraries/Box2D/Dynamics/Contacts/b2CircleContact.h \
./libraries/Box2D/Dynamics/Contacts/b2CircleContact.cpp \
./libraries/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.h \
./libraries/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp \
./libraries/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.h \
./libraries/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp \
./libraries/Box2D/Common/b2Timer.h \
./libraries/Box2D/Common/b2Timer.cpp \
./libraries/Box2D/Common/b2StackAllocator.h \
./libraries/Box2D/Common/b2StackAllocator.cpp \
./libraries/Box2D/Common/b2Settings.h \
./libraries/Box2D/Common/b2Settings.cpp \
./libraries/Box2D/Common/b2Math.h \
./libraries/Box2D/Common/b2Math.cpp \
./libraries/Box2D/Common/b2GrowableStack.h \
./libraries/Box2D/Common/b2Draw.h \
./libraries/Box2D/Common/b2Draw.cpp \
./libraries/Box2D/Common/b2BlockAllocator.h \
./libraries/Box2D/Common/b2BlockAllocator.cpp \
./libraries/Box2D/Collision/b2TimeOfImpact.h \
./libraries/Box2D/Collision/b2TimeOfImpact.cpp \
./libraries/Box2D/Collision/b2DynamicTree.h \
./libraries/Box2D/Collision/b2DynamicTree.cpp \
./libraries/Box2D/Collision/b2Distance.h \
./libraries/Box2D/Collision/b2Distance.cpp \
./libraries/Box2D/Collision/b2Collision.h \
./libraries/Box2D/Collision/b2Collision.cpp \
./libraries/Box2D/Collision/b2CollidePolygon.cpp \
./libraries/Box2D/Collision/b2CollideEdge.cpp \
./libraries/Box2D/Collision/b2CollideCircle.cpp \
./libraries/Box2D/Collision/b2BroadPhase.h \
./libraries/Box2D/Collision/b2BroadPhase.cpp \
./libraries/Box2D/Collision/Shapes/b2Shape.h \
./libraries/Box2D/Collision/Shapes/b2PolygonShape.h \
./libraries/Box2D/Collision/Shapes/b2PolygonShape.cpp \
./libraries/Box2D/Collision/Shapes/b2EdgeShape.h \
./libraries/Box2D/Collision/Shapes/b2EdgeShape.cpp \
./libraries/Box2D/Collision/Shapes/b2CircleShape.h \
./libraries/Box2D/Collision/Shapes/b2CircleShape.cpp \
./libraries/Box2D/Collision/Shapes/b2ChainShape.h \
./libraries/Box2D/Collision/Shapes/b2ChainShape.cpp \
./libraries/Box2D/Box2D.h \
./common/wrap_Data.h \
./common/wrap_Data.cpp \
./common/version.h \
./common/utf8.h \
./common/utf8.cpp \
./common/types.h \
./common/runtime.h \
./common/runtime.cpp \
./common/math.h \
./common/int.h \
./common/delay.h \
./common/delay.cpp \
./common/config.h \
./common/b64.h \
./common/b64.cpp \
./common/Vector.h \
./common/Vector.cpp \
./common/Variant.h \
./common/Variant.cpp \
./common/StringMap.h \
./common/Reference.h \
./common/Reference.cpp \
./common/Object.h \
./common/Object.cpp \
./common/Module.h \
./common/Memoizer.h \
./common/Memoizer.cpp \
./common/Matrix.h \
./common/Matrix.cpp \
./common/Exception.h \
./common/Exception.cpp \
./common/EnumMap.h \
./common/Data.h